--- a/www/css/photoUpload.css
+++ b/www/css/photoUpload.css
@@ -18,9 +18,9 @@
 
 #buttonPlaceholder {
     display: inline;
-    border: 1px solid rgb(127, 170, 255);
-    background-color: rgb(197, 217, 255);
-    padding: 2px
+    border: 1px solid #DFDFDF;
+    background-color: #F6F6F6;
+    padding: 2px;
 }
 
 #uploadButton {
