--- a/www/css/main.css
+++ b/www/css/main.css
@@ -93,12 +93,15 @@ body{
 
 /*meta*/
 .meta{
-    
+    padding-top: 1em;
 }
 .meta div{
     display: inline-block;
 }
 
+.text{
+    padding: 1em;
+}
 /*table fix*/
 table, th, td, tr {
     border: none;
