--- a/www/css/talk.css
+++ b/www/css/talk.css
@@ -1,4 +1,10 @@
 
+/*talks show*/
+.talk h2{
+    padding-top: 1em;
+}
+
+/*sections tree*/
 .sectionMenu ul {
     list-style:none outside none;
 }
@@ -12,8 +18,10 @@
     margin-left:30px;
     position:relative;
 }
+
+/*list talks*/
 .talkBrief{
-    margin-top: 3em;
+    margin-top: 5em;
 }
 .talkBrief p{
     margin: 0.5em;
@@ -25,25 +33,31 @@
     font-size: 12pt;
     color: #444;
 }
+
+/*talk tags*/
+.assigned-tags  {
+    background: url("/images/icons/tags/icon.gif") no-repeat scroll;
+    min-height: 2em;
+}
 .assigned-tags ul {
+    padding-left: 2em;
     list-style:none outside none;
 }
 .assigned-tags li {
     display:inline;
     color: #fff;
-    background-color: #aa1;
     margin: 0px 2px;
     font-size: 8pt;
 }
 
-.tagCounter div{
-    float:left;
-    color: #fff;
-    background-color: #aa1;
+
+/*tag cloud*/
+.tagCounter li{
+    display: inline-block;
     margin: 8px 5px;
 }
 .tagCounter {
-    float:left;
+    list-style:none outside none;
 }
 
 /* last block */
