--- a/www/css/location.css
+++ b/www/css/location.css
@@ -151,3 +151,7 @@ ul.regions {
     display: inline-block;
     padding: 0 0.5em 0 1em;
 }
+/*my locvaitons*/
+#locationMy ul li{
+    padding-top: 2em;
+}
