--- a/www/css/address.css
+++ b/www/css/address.css
@@ -17,7 +17,8 @@
     float:left;
 }
 .locationList ul li{
-    padding-top: 3em;
+    padding-top: 1em;
+    padding-bottom: 2em;
     clear: both;
     list-style-type: none;
 }
