--- a/www/css/profit.css
+++ b/www/css/profit.css
@@ -1,6 +1,7 @@
 /*profit brief*/
 .profitBrief{
-    padding-top: 2em;
+    padding-top: 1em;
+    padding-bottom: 2em;
 }
 
 /*profit details table*/
