--- a/www/css/profile.css
+++ b/www/css/profile.css
@@ -117,7 +117,8 @@
 .user_list {
     display: block;
     clear:both;
-    padding-top: 30px;
+    padding-top: 1.5em;
+    padding-bottom: 0.5em;
     border-bottom: 1px solid #EDEDED;
     height: 70px;
 
