--- a/www/css/inbox.css
+++ b/www/css/inbox.css
@@ -11,7 +11,7 @@
 }
 #inbox {
     float: left;
-    width: 80%;
+    width: 77%;
 }
 
 #inbox div.qweqwe {
@@ -20,8 +20,26 @@
 
 #inboxControl{
     border: 1px solid #eee;
-    float: left;
-    width: 19%;
+    float: right;
+    padding: 0.5em;
+    width: 20%;
+}
+#inboxControl label{
+    display: block;
+    padding-top: 0.5em;
+}
+#inboxControl input{
+    -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius:3px 3px 3px 3px;
+    border-radius:3px 3px 3px 3px;
+    border: 1px solid #BBBBBB;
+    font-family: Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    line-height: 1em;
+    padding: 5px 7px;
+}
+#inboxControl h4{
+    padding-top: 1em;    
 }
 #inboxControl ul{
     list-style-type: none;
@@ -29,4 +47,7 @@
 #inboxControl ul li{
     padding-top: 1em;
     padding: 0.5em 0 0 0.5em;
+}
+#inboxControl .delete{
+    padding-left: 0.3em;
 }
