--- a/www/css/main.css
+++ b/www/css/main.css
@@ -89,12 +89,12 @@ body{
 }
 
 ul.i_like_it{
-    padding: 1em 0 2em 1em;    
+    padding: 1em 0 2em 0em;    
     clear: both;
 }
 ul.i_like_it li{
     display: block;
-    width: 180px;
+    padding-left: 1em;
     position: relative;
     float:left;
 }
