--- a/www/css/main.css
+++ b/www/css/main.css
@@ -89,7 +89,7 @@ body{
 }
 
 .addthis_toolbox{
-    padding: 1em 0 0 1em;
+    padding: 1em;
 }
 .addthis_toolbox a{
     margin-left: 0.5em !important;
