--- a/www/css/location.css
+++ b/www/css/location.css
@@ -18,7 +18,12 @@
     display: block;
     clear: both;
 }
-
+.search_empty{
+    padding: 1em 0 0.5em 0em;
+}
+.search_form button.button_01{
+    margin-top: -4px;
+}
 /*map partial*/
 
 a.dashed:visited {
