--- a/www/css/form.css
+++ b/www/css/form.css
@@ -56,6 +56,12 @@ div.form_footer{
 .mceEditor iframe{
     width: 104% !important;
 }
+div.imp_redactor_box{
+    -moz-border-radius: 3px 3px 3px 3px !important;
+    -webkit-border-radius:3px 3px 3px 3px !important;
+    border-radius:3px 3px 3px 3px !important;
+    border: 1px solid #BBBBBB !important; 
+}
 .autocomplete b {
     -moz-border-radius: 0 2px 2px 0;
     -webkit-border-radius: 0 2px 2px 0;
