--- a/www/css/comment.css
+++ b/www/css/comment.css
@@ -12,6 +12,10 @@
     margin-top: 2em;
     display: block;
 }
+#newComment textarea{
+    width: 700px;
+    height: 300px;
+}
 
 .comment .commentBar .rating{
     font-size: 1em;
