--- a/www/css/rating.css
+++ b/www/css/rating.css
@@ -2,6 +2,8 @@
     width: 70px;
     text-align: right;
     margin: 0 5px 0 -25px;
+    font-weight: bold;
+    color: #759E1A;
 }
 .rating a img{
     border:none;
