--- a/www/css/menu.css
+++ b/www/css/menu.css
@@ -43,6 +43,12 @@
     line-height:16px;
     color:#2f2f2f;
     text-shadow:#FFFFFF 0 1px 1px ;
+    
+    color: #444444;
+    font: 700 20px "PT Sans",Verdana,Tahoma,Arial,sans-serif;
+    letter-spacing: 1px;
+    text-align: center;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
 }
 
 
@@ -164,6 +170,7 @@ strong {
 .menu_block .createdBy{
     padding-left: 5px;
     text-align: right;
+    display: block;
 }
 
 .mini_menu{
