--- a/www/css/base.css
+++ b/www/css/base.css
@@ -9,7 +9,7 @@ body
 }
 body
 {
-    font: 1em Arial, Helvetica, sans-serif;
+    font: 14px Arial, Helvetica, sans-serif;
     text-align:left;
     background-color:white;
 }
@@ -21,7 +21,7 @@ body
 }
 p
 {
-    font-size:14px;
+    font-size:16px;
     padding-bottom:10px;
 }
 a
