--- a/www/css/event.css
+++ b/www/css/event.css
@@ -8,7 +8,8 @@
 }
 .eventListItem{
     padding-top: 1em;
-    padding-bottom: 2em;
+    padding-bottom: 1.5em;
+    border-top: 1px solid #759E1A;
 }
 
 /*from*/
