--- a/www/css/main.css
+++ b/www/css/main.css
@@ -12,7 +12,7 @@ body{
 #left_layout{
     float:left;
     width: 20%;
-    padding: 0.5em;
+    padding: 0 1em 2em 1em;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     border-radius: 8px;
@@ -22,9 +22,9 @@ body{
 
 #right_layout{
     float:right;
-    width: 76%;
+    width: 74%;
     margin-left: 0.5em;
-    padding: 0.5em;
+    padding: 1em;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     border-radius: 8px;
@@ -33,7 +33,7 @@ body{
 }
 .content{
     /*    width: 90%;*/
-    min-width: 1270px;
+    min-width: 1150px;
     margin:0 1.5em;
 }
 
