--- a/www/css/profit.css
+++ b/www/css/profit.css
@@ -1,7 +1,10 @@
 /*profit brief*/
 .profitBrief{
-    padding-top: 1em;
-    padding-bottom: 2em;
+    padding: 1em 2em 1.5em 2em;
+    border-top: 1px solid #759E1A;
+}
+.profitBrief:last-child{
+    color:red;
 }
 
 /*profit details table*/
