--- a/www/css/main.css
+++ b/www/css/main.css
@@ -4,15 +4,18 @@ body{
     background: url("/images/common/backgrounds/back/noisy.png") repeat scroll 0 0 transparent;
     background-color: #EFEFEF;
 }
-
+#page{    
+    min-width: 1150px;
+}
 /*layout*/
 #middle{
     padding-bottom: 20px;
+    padding-top: 60px;
 }
 #left_layout{
     float:left;
     width: 20%;
-    padding: 0 1em 2em 1em;
+    padding: 1em 1em 1.5em 1em;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     border-radius: 8px;
@@ -23,7 +26,7 @@ body{
 #right_layout{
     float:right;
     width: 74%;
-    margin-left: 0.5em;
+/*    margin-left: 0.5em;*/
     padding: 1em;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
@@ -33,8 +36,8 @@ body{
 }
 .content{
     /*    width: 90%;*/
-    min-width: 1150px;
-    margin:0 1.5em;
+/*    min-width: 1150px;*/
+    padding:0 1.5em;
 }
 
 /*tab panel*/
