css fixed, tabs show fixed, top profrits fixed

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -51,7 +51,7 @@ body{
     border-bottom: 1px solid #BBBBBB;
     bottom: 0;
     margin: 0;
-    padding-left: 1em;
+    padding: 0 0 0 1em;
     position: absolute;
     width: 2000px;
 }
@@ -60,15 +60,23 @@ body{
     float: left;
     list-style-type: none;
     margin-bottom: -1px;
+    height: 22px;
     margin-right: 8px;
     white-space: nowrap;
 }
 .tabPanel ul li span{
+
+
+    background-color: #EEEEEE;
+    border-left: 1px solid #BBBBBB;
+    border-right: 1px solid #BBBBBB;
+    border-top: 1px solid #BBBBBB;
+    border-bottom: 1px solid #BBBBBB;
     -moz-border-radius: 0.3em 0.3em  0 0;
     -webkit-border-radius: 0.3em 0.3em  0 0;
     border-radius:0.3em 0.3em  0 0;
 
-    display: block;
+    display: inline;
     font-size: 0.9em;
     line-height: 1.3em;
     padding: 4px 6px;
@@ -76,11 +84,6 @@ body{
     color: #333333;
     font-weight: normal;
 
-    background-color: #EEEEEE;
-    border-left: 1px solid #BBBBBB;
-    border-right: 1px solid #BBBBBB;
-    border-top: 1px solid #BBBBBB;
-    border-bottom: 1px solid #BBBBBB;
 }
 
 .tabPanel ul li span:hover{
