--- a/www/css/menu.css
+++ b/www/css/menu.css
@@ -140,3 +140,55 @@ strong {
     float: right;
     padding-top: 6px;
 }
+
+@media (max-width: 1150px) {
+    .navbar .nav > li {
+        float: left;
+        display: block;
+    }
+    .nav a {
+        line-height: 29px !important;
+        letter-spacing: 1.5px !important;
+    }
+    .navbar .nav{
+        position: relative;
+        left: 0;
+        display: block;
+        float: left;
+        margin: 0 10px 0 0;
+    }
+    .navbar-fixed-top{
+        min-width: 1150px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+        margin-bottom: 0
+    }
+    .navbar-fixed-top .navbar-inner {
+        padding: 0;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        border-radius: 0;
+    }
+    .navbar .brand{
+        float: left;
+        display: block;
+        padding: 8px 20px 12px;
+        margin-left: -20px;
+        font-size: 20px;
+        font-weight: 200;
+        line-height: 1;
+        color: white;
+    }
+    .navbar-form, .navbar-search {
+        float: right;
+        padding: 0;
+        margin: 0;
+        border: none;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+    }
+}
